# language-resources

./: .bazelrc  .bazelrc.travis  .gitattributes  .gitignore  .travis.yml  BUILD  CONTRIBUTING.md  README.md  WORKSPACE  farmhash.BUILD  googletest.BUILD  graphemes.py  openfst.BUILD  opengrm-ngram.BUILD  pronounce.py  re2.BUILD  setup.cfg  setup.py  setup.sh  six.BUILD  sparrowhawk.BUILD  sptk.BUILD  thrax.BUILD  thrax.bzl  travis_script.sh  world.BUILD
af/: BUILD  BUILD.bazel  alignables.txt  lex_additional.txt  lex_exceptions.txt  lex_generated.txt  phonemes.txt  prepare-g2p-data.sh  test_words.txt  train-graphone-model.sh
af/data/: BUILD  prompts.tsv
af/festvox/: BUILD  BUILD.bazel  README.md  apply_phonology.py  build-voice.sh  build_tiny_voice.sh  lexicon.scm  phonology.json  prepare_prompts.py  txt.done.data
af/merlin/: README.md
af/sparrowhawk/: BUILD  BUILD.bazel  README.md  af_sparrowhawk.sh  sparrowhawk_configuration.ascii_proto
bn/: BUILD  BUILD.bazel  LICENSE  README.md  alignables.txt  grapheme.syms  graphemes.py  graphemes_test.tsv  lexicon-diagnostics.cc  phonemes.txt  transcription.md  zero_width.py
bn/data/: BUILD.bazel  README.md  lexicon.tsv  prompts.tsv  verbs.tsv
bn/data_sets/: iiit_ben.txt
bn/festvox/: BUILD.bazel  README.md  lexicon.scm  phonology.json  txt.done.data
bn/merlin/: README.md
bn/sparrowhawk/: BUILD.bazel  README.md  bn_verbalize_spec.txt  sparrowhawk.sh  sparrowhawk_configuration.ascii_proto  verbalizer.ascii_proto
bn/tools/: munge_enwiktionary.py  munge_iiit_ben.py
festus/: BUILD  BUILD.bazel  README.md  algebraic-path-test.cc  algebraic-path.h  alignables-util-test.cc  alignables-util.cc  alignables-util.h  alignables.proto  arc-test.cc  arc.h  best-labeling.cc  expression-node.h  expression.proto  float-weight-star.h  fst-util.h  fst2re.cc  fstnbinom.cc  fstrmepscycle.cc  g2p.sh  hash.h  iterator-test.cc  iterator.h  label-maker.cc  label-maker.h  lexicon-diagnostics.cc  lexicon-processor.cc  lexicon-processor.h  make-alignable-symbols.cc  make-runtime-fsts.cc  math-util.h  matrix-test.cc  matrix.h  max-times-semiring-test.cc  max-times-semiring.h  mode-search.h  modular-int-semiring-test.cc  modular-int-semiring.h  nbinom.h  ngramfinalize.cc  (+28 more)
festus/runtime/: BUILD  BUILD.bazel  GNUmakefile  compact.h  fst-util.h  g2p-lookup.cc  g2p.h  ngram_model_with_final_backoff.fst  ngram_model_without_final_backoff.fst  total-weight.cc
fonbund/: BUILD.bazel  README.md  distinctive_features.proto  features_for_segments.py  helpers.py  ipa_symbols.proto  ipa_symbols.textproto  ipa_symbols_repository.py  ipa_symbols_repository_test.py  panphon_util.py  segment_normalizer.py  segment_normalizer_config.proto  segment_normalizer_test.py  segment_repository_config.proto  segment_repository_reader.py  segment_repository_reader_test.py  segment_to_features_converter.py  segment_to_features_converter_test.py  segments.py  show_ipa_symbols.py  show_panphon.py  show_segments.bzl  show_segments.py
fonbund/config/: ipa_symbols.textproto  segment_repository_config_panphon.textproto  segment_repository_config_phoible.textproto  segment_repository_config_phoible_fonetikode.textproto
fonbund/example/: BUILD.bazel  convert_segments.py
fonbund/testdata/: phoible_segments.txt  tiny_panphon_example.csv
hi_ur/: BUILD  BUILD.bazel  alignables.txt  hi-ur.txt  hi2ur.py  hi_pron_alignables.txt  hi_ur_alignables.txt  hi_ur_core.tsv  hi_ur_extended.tsv  hi_ur_other.tsv  hi_ur_pron.tsv  preprocess_arab.py  symbolize.py  tsv2html.py  ur_pron_alignables.txt
hi_ur/data/: wikidata_20150427.tsv
jv/: BUILD  BUILD.bazel  grapheme.syms  javanese.grm  phoneme.syms  phonemes.txt  tokenize.py  transcription.md
jv/data/: BUILD.bazel  jvf_prompts.tsv  jvm_prompts.tsv  lexicon.tsv  prompts.txt
jv/festvox/: BUILD  BUILD.bazel  jvf.txt.done.data  jvm.txt.done.data  lexicon.scm  phonology.json
jv/sparrowhawk/: BUILD.bazel  README.md  jv_verbalize_spec.txt  sparrowhawk.sh  sparrowhawk_configuration.ascii_proto
km/sparrowhawk/: BUILD.bazel  README.md  km_verbalize_spec.txt  sparrowhawk.sh  sparrowhawk_configuration.ascii_proto
mul_034/: BUILD.bazel  Beng.grm  Beng_test.tsv  Deva.grm  Deva_test.tsv  Malayalam_InterIndic_test.py  Sinh.grm  Sinh_test.tsv  build_defs.bzl  compile_grm_helper.sh  extra.syms  indic_graphemes.tsv  make_grapheme_syms.py  make_grm_fragment.py  make_script_syms.py  script_util.py
ne/sparrowhawk/: BUILD.bazel  README.md  ne_verbalize_spec.txt  sparrowhawk.sh  sparrowhawk_configuration.ascii_proto
pi_sa/: BUILD.bazel  Beng.syms  Deva.syms  Java.syms  Khmr.syms  Lana.syms  Laoo.syms  Mymr.syms  README.md  Sinh.syms  Sund.syms  Telu.syms  Thai.syms  pi_Deva-pi_Thai.txt  pi_Latn-pi_Deva.txt  pi_Thai-pi_Laoo.txt  symbolize.py  translit_testdata.tsv
si/: BUILD  BUILD.bazel  README.md  alignables.txt  dict_exceptions.txt  dict_homographs.txt  dict_regular.txt  grapheme.syms  graphemes.py  graphemes_test.tsv  lexicon_test.tsv  normalize_text.py  phoneme.syms  phonemes.txt  prompt_words_in_lexicon.py  si-si_FONIPA.txt  sinhala.grm  transcription.md  zero_width.py
si/data/: BUILD  lexicon.tsv  prompts.tsv
si/festvox/: BUILD  BUILD.bazel  README.md  ipa_phonology.json  lexicon.scm  txt.done.data
si/merlin/: README.md  questions_with_cqs.hed  questions_without_cqs.hed
si/sparrowhawk/: BUILD  BUILD.bazel  README.md  si_sparrowhawk.sh  sparrowhawk_configuration_serialization.ascii_proto  (+2 more)
utils/: BUILD  BUILD.bazel  apply_phonology.py  build_festvox_voice.sh  edist.py  eval.sh  eval_dictionary_simple.py  eval_lex.py  evaluate_pronunciation_rules.py  festival_lexicon_from_tsv.py  festival_prompts_from_tsv.py  freq.py  generate_hts_questions.py  grapheme_util.py  grm_tester.cc  icu_util.py  lm-scores.cc  merge_lexicons.py  merlin_confs.py  phonology_json_validator.py  python_version.py  run_docker_merlin_training.sh  sample.py  setup_festival.sh  setup_merlin.sh  sh-utter.cc  test_icu_transform.py  thrax_g2p.cc  tsv_to_festival_lexicon.py  uniquely_decodable.py  utf8.py  utf8_dump.py  utf8_test.py  utf8_test.sh  utf8_test_stdout.txt
(+2110 files in other folders)
