[metadata]
name = fonbund
version = 0.1.0
description = Library for combining cross-lingual phonological segment data
long_description = file: fonbund/README.md
url = https://github.com/googlei18n/language-resources/tree/fonbund/fonbund
license = Apache 2.0
license-file = LICENSE
classifier =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = fonbund
zip_safe = true
install_requires =
    absl_py
    protobuf
    six
scripts =
    fonbund/features_for_segments.py
    fonbund/show_segments.py
include_package_data = True

[options.package_data]
fonbund = config/*

[options.extras_require]
panphon = panphon

[bdist_wheel]
universal = 1
