# Copyright 2018 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@subpar//:subpar.bzl", "par_binary")

py_library(
    name = "segments",
    srcs = ["segments.py"],
    deps = [
        "@PanPhon//:panphon_data",
        "@clld_phoible//:phoible_data",
        "@phon_class_counts//:phon_class_counts_data",
    ],
)

par_binary(
    name = "show_segments",
    srcs = ["show_segments.py"],
    deps = [
        ":segments",
        "@io_abseil_py//absl:app",
        "@io_abseil_py//absl/flags",
    ],
)

py_proto_library(
    name = "ipa_symbols_py_proto",
    srcs = ["ipa_symbols.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
)

par_binary(
    name = "show_ipa_symbols",
    srcs = ["show_ipa_symbols.py"],
    data = [
        "ipa_symbols.textproto",
    ],
    deps = [
        ":ipa_symbols_py_proto",
        "@io_abseil_py//absl:app",
        "@six_archive//:six",
    ],
)
