# Copyright 2018 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@subpar//:subpar.bzl", "par_binary")

py_library(
    name = "segments",
    srcs = ["segments.py"],
    deps = [
        "@PanPhon//:panphon_data",
        "@clld_phoible//:phoible_data",
        "@phon_class_counts//:phon_class_counts_data",
    ],
)

par_binary(
    name = "show_segments",
    srcs = ["show_segments.py"],
    deps = [
        ":segments",
        "@io_abseil_py//absl:app",
        "@io_abseil_py//absl/flags",
    ],
)

py_proto_library(
    name = "segment_normalizer_config_py_proto",
    srcs = ["segment_normalizer_config.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
)

py_library(
    name = "segment_normalizer",
    srcs = ["segment_normalizer.py"],
    deps = [":segment_normalizer_config_py_proto"],
)

py_test(
    name = "segment_normalizer_test",
    size = "small",
    srcs = ["segment_normalizer_test.py"],
    deps = [":segment_normalizer"],
)

py_proto_library(
    name = "ipa_symbols_py_proto",
    srcs = ["ipa_symbols.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
)

py_library(
    name = "ipa_symbols_repository",
    srcs = ["ipa_symbols_repository.py"],
    data = ["config/ipa_symbols.textproto"],
    deps = [
        ":ipa_symbols_py_proto",
        ":segment_normalizer",
        "@io_abseil_py//absl/logging",
        "@six_archive//:six",
    ],
)

py_test(
    name = "ipa_symbols_repository_test",
    size = "small",
    srcs = ["ipa_symbols_repository_test.py"],
    data = ["testdata/phoible_segments.txt"],
    deps = [
        ":ipa_symbols_repository",
        ":segment_normalizer",
    ],
)
