# Copyright 2018 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@subpar//:subpar.bzl", "par_binary", "par_test")

exports_files(
    glob(
        include = [
            "*.py",
            "README.md",
            "config/*",
        ],
        exclude = ["*_test.py"],
    ),
)

py_library(
    name = "segments",
    srcs = ["segments.py"],
    data = [
        # Segment repository parsing configurations.
        "config/segment_repository_config_panphon.textproto",
        "config/segment_repository_config_phoible.textproto",
        "config/segment_repository_config_phoible_fonetikode.textproto",
    ],
    deps = [
        ":helpers",
        ":segment_repository_config_py_proto",
        "@clld_phoible//:phoible_data",
        "@panphon//:panphon_data",
        "@phon_class_counts//:phon_class_counts_data",
    ],
)

par_binary(
    name = "show_segments",
    srcs = ["show_segments.py"],
    deps = [
        ":helpers",
        ":segments",
        "@io_abseil_py//absl:app",
        "@io_abseil_py//absl/flags",
        "@io_abseil_py//absl/logging",
    ],
)

load(":show_segments.bzl", "show_segments_test")

show_segments_test(db_name = "phoible")

show_segments_test(db_name = "panphon")

show_segments_test(db_name = "phoible_fonetikode")

py_library(
    name = "helpers",
    srcs = ["helpers.py"],
    deps = [
        "@com_google_protobuf//:protobuf_python",
        "@six_archive//:six",
    ],
)

py_proto_library(
    name = "segment_normalizer_config_py_proto",
    srcs = ["segment_normalizer_config.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
)

py_library(
    name = "segment_normalizer",
    srcs = ["segment_normalizer.py"],
    deps = [
        ":helpers",
        ":segment_normalizer_config_py_proto",
    ],
)

par_test(
    name = "segment_normalizer_test",
    size = "small",
    srcs = ["segment_normalizer_test.py"],
    deps = [":segment_normalizer"],
)

py_proto_library(
    name = "ipa_symbols_py_proto",
    srcs = ["ipa_symbols.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
)

py_library(
    name = "ipa_symbols_repository",
    srcs = ["ipa_symbols_repository.py"],
    data = ["config/ipa_symbols.textproto"],
    deps = [
        ":helpers",
        ":ipa_symbols_py_proto",
        ":segment_normalizer",
        "@io_abseil_py//absl/logging",
        "@six_archive//:six",
    ],
)

par_test(
    name = "ipa_symbols_repository_test",
    size = "small",
    srcs = ["ipa_symbols_repository_test.py"],
    data = ["testdata/phoible_segments.txt"],
    deps = [
        ":helpers",
        ":ipa_symbols_repository",
        ":segment_normalizer",
    ],
)

py_proto_library(
    name = "segment_repository_config_py_proto",
    srcs = ["segment_repository_config.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
    deps = [":segment_normalizer_config_py_proto"],
)

py_library(
    name = "segment_repository_reader",
    srcs = ["segment_repository_reader.py"],
    deps = [
        ":helpers",
        ":segment_normalizer",
        ":segment_repository_config_py_proto",
        "@io_abseil_py//absl/logging",
    ],
)

par_test(
    name = "segment_repository_reader_test",
    size = "small",
    srcs = ["segment_repository_reader_test.py"],
    data = ["testdata/tiny_panphon_example.csv"],
    deps = [
        ":helpers",
        ":segment_repository_config_py_proto",
        ":segment_repository_reader",
    ],
)

py_proto_library(
    name = "distinctive_features_py_proto",
    srcs = ["distinctive_features.proto"],
    default_runtime = "@com_google_protobuf//:protobuf_python",
    protoc = "@com_google_protobuf//:protoc",
)

py_library(
    name = "segment_to_features_converter",
    srcs = ["segment_to_features_converter.py"],
    deps = [
        ":distinctive_features_py_proto",
        ":ipa_symbols_repository",
        ":segment_repository_reader",
        "@io_abseil_py//absl/logging",
    ],
)

par_test(
    name = "segment_to_features_converter_test",
    size = "small",
    srcs = ["segment_to_features_converter_test.py"],
    data = [
        "config/segment_repository_config_panphon.textproto",
        "testdata/tiny_panphon_example.csv",
    ],
    deps = [
        ":distinctive_features_py_proto",
        ":helpers",
        ":segment_to_features_converter",
    ],
)

par_binary(
    name = "features_for_segments",
    srcs = ["features_for_segments.py"],
    deps = [
        ":distinctive_features_py_proto",
        ":helpers",
        ":segment_to_features_converter",
        ":segments",
        "@io_abseil_py//absl:app",
        "@io_abseil_py//absl/flags",
        "@io_abseil_py//absl/logging",
    ],
)

sh_test(
    name = "features_for_segments_test",
    size = "small",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        $(location features_for_segments.par) \
          --databases=phoible,phoible_fonetikode,panphon \
          --segments='e+i,b,i,s,i,d,i,i' |
        grep -c '^features ' |
        diff - <(echo 8)
        """,
    ],
    data = ["features_for_segments.par"],
)
