# Copyright 2016, 2017, 2018 Google LLC. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

py_binary(
    name = "hi2ur",
    srcs = ["hi2ur.py"],
    srcs_version = "PY2AND3",
    deps = [
        "//utils:icu_util",
        "//utils:utf8",
    ],
)

sh_test(
    name = "hi2ur_test",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        cat $(location hi_ur_core.tsv) $(location hi_ur_other.tsv) |
        $(location :hi2ur) $(location hi-ur.txt)
        """,
    ],
    data = [
        "hi-ur.txt",
        "hi_ur_core.tsv",
        "hi_ur_other.tsv",
        ":hi2ur",
    ],
)

py_binary(
    name = "tsv2html",
    srcs = ["tsv2html.py"],
    srcs_version = "PY2AND3",
    deps = ["//utils:utf8"],
)

py_binary(
    name = "symbolize",
    srcs = ["symbolize.py"],
    srcs_version = "PY2AND3",
    deps = ["//utils:utf8"],
)

sh_test(
    name = "core_alignment_test",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        for c in 1 2; do
          $(location symbolize) 0 $$c \
            < $(location hi_ur_core.tsv) |
          $(location //festus:lexicon-diagnostics) \
            --alignables=$(location alignables.txt) \
            --input_index=1 \
            --output_index=2
        done
        """,
    ],
    data = [
        "alignables.txt",
        "hi_ur_core.tsv",
        ":symbolize",
        "//festus:lexicon-diagnostics",
    ],
)

sh_test(
    name = "extended_alignment_test",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        $(location symbolize) 0 1 \
          < $(location hi_ur_extended.tsv) |
        $(location //festus:lexicon-diagnostics) \
          --alignables=$(location alignables.txt) \
          --input_index=1 \
          --output_index=2
        """,
    ],
    data = [
        "alignables.txt",
        "hi_ur_extended.tsv",
        ":symbolize",
        "//festus:lexicon-diagnostics",
    ],
)

py_binary(
    name = "preprocess_arab",
    srcs = ["preprocess_arab.py"],
    srcs_version = "PY2AND3",
    deps = ["//utils:utf8"],
)

genrule(
    name = "preprocess_hi_ur_pron",
    srcs = ["hi_ur_pron.tsv"],
    outs = ["preprocessed_hi_ur_pron.tsv"],
    cmd = """
        paste <(
          cut -f 1 $< |
          $(location //utils:thrax_g2p) \
            --far=$(location //mul_034:Deva.far) \
            --far_g2p_key=CODEPOINTS_TO_GRAPHEMES \
            --output_labels=$(location //mul_034:grapheme.syms)
        ) <(
          cut -f 2 $< |
          $(location preprocess_arab)
        ) <(
          cut -f 3 $< |
          sed 's/ \.//g'
        ) > $@
        """,
    tools = [
        ":preprocess_arab",
        "//mul_034:Deva.far",
        "//mul_034:grapheme.syms",
        "//utils:thrax_g2p",
    ],
)

sh_test(
    name = "hi_pron_alignment_test",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        cut -f 1,2,5 $(location preprocessed_hi_ur_pron.tsv) |
        $(location //festus:lexicon-diagnostics) \
          --alignables=$(location hi_pron_alignables.txt) \
          --input_index=1 \
          --output_index=2
        """,
    ],
    data = [
        "hi_pron_alignables.txt",
        "preprocessed_hi_ur_pron.tsv",
        "//festus:lexicon-diagnostics",
    ],
)

sh_test(
    name = "ur_pron_alignment_test",
    timeout = "short",
    srcs = ["//utils:eval.sh"],
    args = [
        """
        cut -f 3,4,5 $(location preprocessed_hi_ur_pron.tsv) |
        $(location //festus:lexicon-diagnostics) \
          --alignables=$(location ur_pron_alignables.txt) \
          --input_index=1 \
          --output_index=2
        """,
    ],
    data = [
        "preprocessed_hi_ur_pron.tsv",
        "ur_pron_alignables.txt",
        "//festus:lexicon-diagnostics",
    ],
)
